--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. Design by<a href="https://html.design/"> Free Html Templates</a></p>
+                    <p>© 2025 All Rights Reserved.JM TECH</p>
                 </div>
             </div>
         </div>
